--- a/main.html
+++ b/main.html
@@ -8,6 +8,40 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<label for='name'>Name :</label>
+		<input type='text' id='name' placeholder='Name'>
+		<br>
+		<br>
+		<label for='phone'>Phone :</label>
+		<input type='text' id='phone' placeholder='Phone Number'>
+		<br>
+		<br>
+		<label for='address'>Name :</label>
+		<input type='text' id='address' placeholder='Address'>
+		<br>
+		<br>
+	    <p><b>Have you ever lived with a Dog before?</b></p>
+		
+		<input type="checkbox" id='checkbox' name='check' value='Have you ever lived with a Dog before?'>
+        <label for="checkbox">Yes</label>
+		<br>
+		<input type="checkbox" id='checkb' name='check' value='Have you ever lived with a Dog before?'>
+        <label for="checkb">No</label>
+	<br>
+	<br>
+	<b>pleace select breed :</b>
+	<select name="multiSelect" id="multiSelect">
+        <option value="Australian Shepherd">Australian Shepherd</option>
+		<option value="Akita">Akita</option>
+		<option value="Alaskan Malamute">Alaskan Malamute</option>
+		<option value="Afghan Hound">Afghan Hound</option>
+		<option value="Doberman Pinscher">Doberman Pinscher</option>
+		
+	</select>
+	<br>
+	<br>
+	<input type="submit" id="submit" value='submit'>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
