--- a/main.html
+++ b/main.html
@@ -8,6 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+<form>
 	<label for='name'>Name :</label>
 		<input type='text' id='name' placeholder='Name'>
 		<br>
@@ -22,10 +23,10 @@
 		<br>
 	    <p><b>Have you ever lived with a Dog before?</b></p>
 		
-		<input type="checkbox" id='checkbox' name='check' value='Have you ever lived with a Dog before?'>
+		<input type="checkbox" id='checkbox' name='check' value='Submit'>
         <label for="checkbox">Yes</label>
 		<br>
-		<input type="checkbox" id='checkb' name='check' value='Have you ever lived with a Dog before?'>
+		<input type="checkbox" id='checkb' name='check' value='Submit'>
         <label for="checkb">No</label>
 	<br>
 	<br>
@@ -41,6 +42,7 @@
 	<br>
 	<br>
 	<input type="submit" id="submit" value='submit'>
+</form>
 	
     <script type="text/javascript" src="./script.js">
 </script>
