--- a/main.html
+++ b/main.html
@@ -21,14 +21,10 @@
 		<input type='text' id='address' placeholder='Address'>
 		<br>
 		<br>
-	    <p><b>Have you ever lived with a Dog before?</b></p>
-		
-		<input type="checkbox" id='checkbox' name='check' value='Submit'>
-        <label for="checkbox">Yes</label>
-		<br>
-		<input type="checkbox" id='checkb' name='check' value='Submit'>
-        <label for="checkb">No</label>
-	<br>
+	    
+	    <input type="checkbox" name="checkbox" id="checkbox" value="Have you ever lived with a Dog before?">
+	<label for="checkbox">Have you ever lived with a Dog before?</label>
+	<br/>
 	<br>
 	<b>pleace select breed :</b>
 	<select name="multiSelect" id="multiSelect">
