--- a/main.html
+++ b/main.html
@@ -37,7 +37,7 @@
 	</select>
 	<br>
 	<br>
-	<input type="submit" id="submit" value='submit'>
+	<input type="submit" id="submit" value='Submit'>
 </form>
 	
     <script type="text/javascript" src="./script.js">
